--- a/ThueXeMay/ThueXeMay.csproj
+++ b/ThueXeMay/ThueXeMay.csproj
@@ -1936,18 +1936,58 @@
     <Content Include="Content\fonts\ionicons\css\ionicons.min.css" />
     <Content Include="Content\fonts\ionicons\fonts\ionicons.svg" />
     <Content Include="Content\fonts\open-iconic\open-iconic.svg" />
+    <Content Include="Content\images\.DS_Store" />
     <Content Include="Content\images\admin.png" />
     <Content Include="Content\images\avt.png" />
     <Content Include="Content\images\bg_1.jpg" />
+    <Content Include="Content\images\bg_2.jpg" />
     <Content Include="Content\images\bg_3.jpg" />
     <Content Include="Content\images\blog.jpg" />
+    <Content Include="Content\images\blog\blog.jpg" />
+    <Content Include="Content\images\blog\blog1.jpg" />
+    <Content Include="Content\images\blog\blog2.jpg" />
+    <Content Include="Content\images\blog\blog3.jpg" />
+    <Content Include="Content\images\blog\Grey Blue Illustration SEO Optimization Instagram Post %28465 × 416 px%29.png" />
+    <Content Include="Content\images\honda.jpg" />
     <Content Include="Content\images\loc.png" />
     <Content Include="Content\images\member\1.jpg" />
     <Content Include="Content\images\member\2.jpg" />
     <Content Include="Content\images\member\3.jpg" />
     <Content Include="Content\images\member\4.jpg" />
     <Content Include="Content\images\piaggio.jpg" />
-    <Content Include="Content\images\bg_2.jpg" />
+    <Content Include="Content\images\rate\nx1.jpg" />
+    <Content Include="Content\images\rate\nx2.jpg" />
+    <Content Include="Content\images\rate\nx3.jpg" />
+    <Content Include="Content\images\rate\nx4.jpg" />
+    <Content Include="Content\images\rate\nx5.jpg" />
+    <Content Include="Content\images\suzuki.jpg" />
+    <Content Include="Content\images\sym.jpg" />
+    <Content Include="Content\images\user.png" />
+    <Content Include="Content\images\vinfast.jpg" />
+    <Content Include="Content\images\xe\ab.png" />
+    <Content Include="Content\images\xe\ATTILA.jpg" />
+    <Content Include="Content\images\xe\bandit.png" />
+    <Content Include="Content\images\xe\Beverly.jpg" />
+    <Content Include="Content\images\xe\blade.png" />
+    <Content Include="Content\images\xe\demo.png" />
+    <Content Include="Content\images\xe\Feliz.jpg" />
+    <Content Include="Content\images\xe\grande.jpg" />
+    <Content Include="Content\images\xe\janus.png" />
+    <Content Include="Content\images\xe\liberty.jpg" />
+    <Content Include="Content\images\xe\medley.jpg" />
+    <Content Include="Content\images\xe\passing.jpg" />
+    <Content Include="Content\images\xe\raider.png" />
+    <Content Include="Content\images\xe\SATRIA.png" />
+    <Content Include="Content\images\xe\Sh.png" />
+    <Content Include="Content\images\xe\Sirius.png" />
+    <Content Include="Content\images\xe\star.jpg" />
+    <Content Include="Content\images\xe\svtn.jpg" />
+    <Content Include="Content\images\xe\Theon.jpg" />
+    <Content Include="Content\images\xe\Vento.jpg" />
+    <Content Include="Content\images\xe\vision.png" />
+    <Content Include="Content\images\xe\wave.png" />
+    <Content Include="Content\images\xe\winner.jpg" />
+    <Content Include="Content\images\yamaha.jpg" />
     <Content Include="Content\js\aos.js" />
     <Content Include="Content\js\bootstrap-datepicker.js" />
     <Content Include="Content\js\bootstrap.min.js" />
@@ -1988,7 +2028,6 @@
     <Content Include="Content\css\.DS_Store" />
     <Content Include="Content\css\bootstrap\.DS_Store" />
     <Content Include="Content\css\css\.DS_Store" />
-    <Content Include="Content\images\.DS_Store" />
     <Content Include="Content\js\.DS_Store" />
     <Content Include="Content\fonts\.DS_Store" />
     <Content Include="Content\fonts\flaticon\.DS_Store" />
@@ -2355,7 +2394,7 @@
     <Content Include="Views\Home\Menu.cshtml" />
     <Content Include="Views\Cart\Checkout.cshtml" />
     <Content Include="Views\Cart\RentSuccess.cshtml" />
-    <Content Include="Views\Shared\ĐK_DV.cshtml" />
+    <Content Include="Views\Shared\DK_DV.cshtml" />
     <Content Include="Views\Shared\FAQs.cshtml" />
   </ItemGroup>
   <ItemGroup>
